// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react:stories for applications should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { NxWelcome } from './nx-welcome';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof NxWelcome> = {
  component: NxWelcome,
  title: 'NxWelcome',
};
export default meta;
type Story = StoryObj<typeof NxWelcome>;

export const Primary = {
  args: {
    title: '',
  },
};

export const Heading: Story = {
  args: {
    title: '',
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/Welcome to NxWelcome!/gi)).toBeTruthy();
  },
};
"
`;

exports[`react:stories for applications should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { Test } from './another-cmp';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof Test> = {
  component: Test,
  title: 'Test',
};
export default meta;
type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
};

export const Heading: Story = {
  args: {
    name: '',
    displayAge: false,
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/Welcome to Test!/gi)).toBeTruthy();
  },
};
"
`;

exports[`react:stories for applications should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { NxWelcome } from './nx-welcome';

const meta: Meta<typeof NxWelcome> = {
  component: NxWelcome,
  title: 'NxWelcome',
};
export default meta;
type Story = StoryObj<typeof NxWelcome>;

export const Primary = {
  args: {
    title: '',
  },
};
"
`;

exports[`react:stories for applications should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { Test } from './another-cmp';

const meta: Meta<typeof Test> = {
  component: Test,
  title: 'Test',
};
export default meta;
type Story = StoryObj<typeof Test>;

export const Primary = {
  args: {
    name: '',
    displayAge: false,
  },
};
"
`;

exports[`react:stories for applications should not update existing stories 1`] = `
"import { ComponentStory, ComponentMeta } from '@storybook/react';
"
`;
